js/js.translator/testData/incremental/invalidation/companionPropertiesWithIntraModuleInliner/lib2/l2.6.kt
fun test(): Int {
    return testIntProperty() + 4
}
